--- a/about_leokasuki.html
+++ b/about_leokasuki.html
@@ -9,6 +9,24 @@
     <script src="about_leokasuki.js" defer></script>
     </head>
     <body>
+        <div class="container">
+        <img src="https://via.placeholder.com/130" alt="Profilbild" class="profile-img">
 
+        <h1>Über mich</h1>
+
+        <p>
+            Hallo! Ich bin <b>Dein Name</b>.  
+            Schreibe hier ein paar Sätze über dich, wer du bist, was du machst,
+            wofür du dich interessierst oder was Leute über dich wissen sollen.
+        </p>
+
+        <p>
+            Du kannst diesen Text komplett anpassen, erweitern oder mit Absätzen,
+            Emojis, Listen und allem was du willst gestalten.
+        </p>
+
+        <div class="socials">
+        </div>
+    </div>
     </body>
 </html>
