Container hobbies hinzugefügt

--- a/about_leokasuki.html
+++ b/about_leokasuki.html
@@ -9,10 +9,11 @@
     <script src="about_leokasuki.js" defer></script>
     </head>
     <body>
-        <div class="container">
-        <img src="https://via.placeholder.com/130" alt="Profilbild" class="profile-img">
-
-        <h1>Über mich</h1>
+        <div class="container_pfp">
+        <img src="https://via.placeholder.com/130" class="profile-img">
+        </div>
+        <div class="container_about_me">
+        <h1>About me</h1>
 
         <p>
             Hallo! Ich bin <b>Dein Name</b>.  
@@ -26,7 +27,58 @@
         </p>
 
         <div class="socials">
+            <a href="https://steamcommunity.com/id/Leokasuki/">Steam</a>
+            <a href="https://github.com/Leokasuki">Github</a>
         </div>
     </div>
+    <div class="container_hobbies">
+    <h2>My hobbies</h2>
+    <ul class="hobbies-list">
+        <li class="hobby">
+            <span class="title">+ Gaming(click me)</span>
+            <ul class="details">
+                <li>All my played Games on Steam</li>
+            </ul>
+        </li>
+        <li class="hobby">
+            <span class="title">+ Watching Anime(click me)</span>
+            <ul class="details">
+                <li>My anime list</li>
+            </ul>
+        </li>
+        <li class="hobby">
+            <span class="title">+ Programming(click me)</span>
+            <ul class="details">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>C#</li>
+            </ul>
+        </li>
+        <li class="hobby">
+            <span class="title">+ Playing Guitar(click me)</span>
+            <ul class="details">
+                <li>J-Rock</li>
+                <li>Russian Rock</li>
+            </ul>
+        </li>
+        <li class="hobby">
+            <span class="title">+ Drawing(click me)</span>
+            <ul class="details">
+                <li> Just on paper</li>
+            </ul>
+        </li>
+        <li class="hobby">
+            <span class="title">+ Learning new Knowledge(click me)</span>
+            <ul class="details">
+                <li>Learing more about Geographie</li>
+                <li>Learning more about History</li>
+                <li>Learning more about Linux</li>
+                <li>Learning more about programming</li>
+                <li>Learning more about linguistics</li>
+            </ul>
+        </li>
+    </ul>
+</div>
     </body>
 </html>
