Added .json and pfp
-moved text to center
-changed main text

--- a/about_leokasuki.html
+++ b/about_leokasuki.html
@@ -10,25 +10,24 @@
     </head>
     <body>
         <div class="container_pfp">
-        <img src="https://via.placeholder.com/130" class="profile-img">
+        <img src="/home/lennard/Dokumente/about_leokasuki_website/about_leokasuki/about_me_images/pfp.png" class="profile-img">
+        <p> 19 • Slav/Lion • 5.August</p>
         </div>
         <div class="container_about_me">
         <h1>About me</h1>
 
         <p>
-            Hallo! Ich bin <b>Dein Name</b>.  
-            Schreibe hier ein paar Sätze über dich, wer du bist, was du machst,
-            wofür du dich interessierst oder was Leute über dich wissen sollen.
+            WELCOME TO MY ABOUT ME WEBSITE!
         </p>
 
         <p>
-            Du kannst diesen Text komplett anpassen, erweitern oder mit Absätzen,
-            Emojis, Listen und allem was du willst gestalten.
+            Here you see more "about me" than in my discord bio.
         </p>
 
         <div class="socials">
             <a href="https://steamcommunity.com/id/Leokasuki/">Steam</a>
             <a href="https://github.com/Leokasuki">Github</a>
+            <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">Spotify</a>
         </div>
     </div>
     <div class="container_hobbies">
