container grows to bottom, when new text
-Added few new things

--- a/about_leokasuki.html
+++ b/about_leokasuki.html
@@ -10,25 +10,25 @@
     </head>
     <body>
         <div class="container_pfp">
-        <img src="/home/lennard/Dokumente/about_leokasuki_website/about_leokasuki/about_me_images/pfp.png" class="profile-img">
+        <img src="about_me_images/pfp.png" class="profile-img">
         <p> 19 • Slav/Lion • 5.August</p>
         </div>
-        <div class="container_about_me">
-        <h1>About me</h1>
+        <div class="about-links-wrapper">
+        <div class="container_about_me_wrapper">
+  <div class="container_about_me_inner">
+    <h1>About me</h1>
+    <p>WELCOME TO MY ABOUT ME WEBSITE!
+    </p>
+    <p>Here you see more "about me" than in my discord bio.</p>
+  </div>
+</div>
 
-        <p>
-            WELCOME TO MY ABOUT ME WEBSITE!
-        </p>
-
-        <p>
-            Here you see more "about me" than in my discord bio.
-        </p>
-
-        <div class="socials">
+    <div class="container_links">
             <a href="https://steamcommunity.com/id/Leokasuki/">Steam</a>
             <a href="https://github.com/Leokasuki">Github</a>
             <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">Spotify</a>
-        </div>
+            <a>AnimeList-Official</a>
+    </div>
     </div>
     <div class="container_hobbies">
     <h2>My hobbies</h2>
@@ -75,6 +75,7 @@
                 <li>Learning more about Linux</li>
                 <li>Learning more about programming</li>
                 <li>Learning more about linguistics</li>
+                <li>Learning more about astronomy</li>
             </ul>
         </li>
     </ul>
