Added Background, Added random gif
-rewrited the adress
-Made container transparent

--- a/about_leokasuki.html
+++ b/about_leokasuki.html
@@ -9,9 +9,14 @@
     <script src="about_leokasuki.js" defer></script>
     </head>
     <body>
+        <div class="pfp-wrapper">
         <div class="container_pfp">
         <img src="about_me_images/pfp.png" class="profile-img">
         <p> 19 • Slav/Lion • 5.August</p>
+        </div>
+        <div class="container_gif">
+        <img src="https://media1.tenor.com/m/H-cS8x2PvwwAAAAC/hatsune-miku-mesmerizer.gif">
+        </div>
         </div>
         <div class="about-links-wrapper">
         <div class="container_about_me_wrapper">
@@ -20,6 +25,7 @@
     <p>WELCOME TO MY ABOUT ME WEBSITE!
     </p>
     <p>Here you see more "about me" than in my discord bio.</p>
+    <p>Here you see things that you never experienced on other websites</p>
   </div>
 </div>
 
@@ -27,7 +33,6 @@
             <a href="https://steamcommunity.com/id/Leokasuki/">Steam</a>
             <a href="https://github.com/Leokasuki">Github</a>
             <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">Spotify</a>
-            <a>AnimeList-Official</a>
     </div>
     </div>
     <div class="container_hobbies">
