Added more about me, cleaned css code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </p>
     <p>Here you see more "about me" than in my discord bio.</p>
     <p>Here you see things that you never experienced on other websites</p>
+    <p>I am a german programmer who really likes gaming(who does not?) and watching anime, this site is still really young and in the future I will add so many things I like to this website and someday I will look back on this beautiful work of art</p>
   </div>
 </div>
 
