Moved Link container, added icons to the link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         <img src="about_me_images/pfp.png" class="profile-img">
         <p> 19 • Slav/Lion • 5.August</p>
         </div>
+        <div class="container_links">
+            <a href="https://steamcommunity.com/id/Leokasuki/">
+        <img src="about_me_images/steam icon.png" alt="Steam">
+    </a>
+    <a href="https://github.com/Leokasuki">
+        <img src="about_me_images/github icon.png" alt="GitHub">
+    </a>
+    <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">
+        <img src="about_me_images/spotify icon.png" alt="Spotify">
+    </a>
+        </div>
         <div class="container_gif">
         <img src="https://media1.tenor.com/m/H-cS8x2PvwwAAAAC/hatsune-miku-mesmerizer.gif">
         </div>
@@ -22,19 +33,10 @@
         <div class="container_about_me_wrapper">
   <div class="container_about_me_inner">
     <h1>About me</h1>
-    <p>WELCOME TO MY ABOUT ME WEBSITE!
-    </p>
-    <p>Here you see more "about me" than in my discord bio.</p>
-    <p>Here you see things that you never experienced on other websites</p>
+    <p>WELCOME TO MY ABOUT ME WEBSITE!<br>Here you see more "about me" than in my discord bio.<br>Here you see things that you never experienced on other websites.</p>
     <p>I am a german programmer who really likes gaming(who does not?) and watching anime, this site is still really young and in the future I will add so many things I like to this website and someday I will look back on this beautiful work of art</p>
   </div>
 </div>
-
-    <div class="container_links">
-            <a href="https://steamcommunity.com/id/Leokasuki/">Steam</a>
-            <a href="https://github.com/Leokasuki">Github</a>
-            <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">Spotify</a>
-    </div>
     </div>
     <div class="container_hobbies">
     <h2>My hobbies</h2>
