Added a gif container, that starts scrolling after it perfectly loaded

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="about_leokasuki.js" defer></script>
     </head>
     <body>
+        <div class="scroll-wrapper">
+    <div class="scroll-content" id="scrollContent">
+    </div>
+    </div>
         <div class="pfp-wrapper">
         <div class="container_pfp">
         <img src="about_me_images/pfp.png" class="profile-img">
@@ -25,16 +29,13 @@
         <img src="about_me_images/spotify icon.png" alt="Spotify">
     </a>
         </div>
-        <div class="container_gif">
-        <img src="https://media1.tenor.com/m/H-cS8x2PvwwAAAAC/hatsune-miku-mesmerizer.gif">
-        </div>
         </div>
         <div class="about-links-wrapper">
         <div class="container_about_me_wrapper">
   <div class="container_about_me_inner">
     <h1>About me</h1>
     <p>WELCOME TO MY ABOUT ME WEBSITE!<br>Here you see more "about me" than in my discord bio.<br>Here you see things that you never experienced on other websites.</p>
-    <p>I am a german programmer who really likes gaming(who does not?) and watching anime, this site is still really young and in the future I will add so many things I like to this website and someday I will look back on this beautiful work of art</p>
+    <p>I am a german programmer who really likes gaming(who does not?) and watching anime, this site is still really young and in the future I will add so many things I like to this website and someday I will look back on this beautiful work of art.</p>
   </div>
 </div>
     </div>
