--- a/index.html
+++ b/index.html
@@ -9,90 +9,99 @@
     </head>
 
     <body>
-        <div class="scroll-wrapper">
-            <div class="scroll-content" id="scrollContent"></div>
-        </div>
-            <div class="pfp-wrapper">
-                <div class="container_pfp">
-                <img src="about_me_images/pfp.png" class="profile-img">
-                <p> 19 • Slav/Lion • 5.August</p>
+        <div class="desktop">
+            <div class="scroll-wrapper">
+                <div class="scroll-content" id="scrollContent"></div>
+            </div>
+                <div class="pfp-wrapper">
+                    <div class="container_pfp">
+                    <img src="about_me_images/pfp.png" class="profile-img">
+                    <p> 19 • Slav/Lion • 5.August</p>
+                    </div>
+                    <div class="container_links">
+                        <a href="https://steamcommunity.com/id/Leokasuki/">
+                            <img src="about_me_images/steam icon.png" alt="Steam">
+                        </a>
+                        <a href="https://github.com/Leokasuki">
+                            <img src="about_me_images/github icon.png" alt="GitHub">
+                        </a>
+                        <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">
+                            <img src="about_me_images/spotify icon.png" alt="Spotify">
+                        </a>
+                    </div>
                 </div>
-                <div class="container_links">
-                    <a href="https://steamcommunity.com/id/Leokasuki/">
-                        <img src="about_me_images/steam icon.png" alt="Steam">
-                    </a>
-                    <a href="https://github.com/Leokasuki">
-                        <img src="about_me_images/github icon.png" alt="GitHub">
-                    </a>
-                    <a href="https://open.spotify.com/user/33x5eydd4lwetkvnd2dr14gn8">
-                        <img src="about_me_images/spotify icon.png" alt="Spotify">
-                    </a>
+            <div class="about-me-wrapper">
+                <div class="container_about_me_wrapper">
+                    <div class="container_about_me_inner">
+                        <h1>About me</h1>
+                        <p>WELCOME TO MY ABOUT ME WEBSITE!<br>Here you see more "about me" than in my discord bio.<br>Here you see things that you never experienced on other websites.</p>
+                        <p>I am a german programmer who really likes gaming(who does not?) and watching anime, this site is still really young and in the future I will add so many things I like to this website and someday I will look back on this beautiful work of art.</p>
+                    </div>
+                </div>
+                <div class="update-log">
+                    <h2>The Update Log</h2>
+                    <p>Here you see all the changes that have take place on this website</p>
                 </div>
             </div>
-        <div class="about-me-wrapper">
-            <div class="container_about_me_wrapper">
-                <div class="container_about_me_inner">
-                    <h1>About me</h1>
-                    <p>WELCOME TO MY ABOUT ME WEBSITE!<br>Here you see more "about me" than in my discord bio.<br>Here you see things that you never experienced on other websites.</p>
-                    <p>I am a german programmer who really likes gaming(who does not?) and watching anime, this site is still really young and in the future I will add so many things I like to this website and someday I will look back on this beautiful work of art.</p>
-                </div>
-            </div>
-            <div class="update-log">
-                <h2>The Update Log</h2>
-                <p>Here you see all the changes that have take place on this website</p>
-            </div>
-        </div>
 
-        <div class="container_hobbies">
-            <h2>My hobbies</h2>
-            <ul class="hobbies-list">
-                <li class="hobby">
-                    <span class="title">+ Gaming(click me)</span>
-                    <ul class="details">
-                        <li>All my played Games on Steam</li>
-                    </ul>
-                </li>
-                <li class="hobby">
-                    <span class="title">+ Watching Anime(click me)</span>
-                    <ul class="details">
-                        <li>My anime list</li>
-                    </ul>
-                </li>
-                <li class="hobby">
-                    <span class="title">+ Programming(click me)</span>
-                    <ul class="details">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>C#</li>
-                    </ul>
-                </li>
-                <li class="hobby">
-                    <span class="title">+ Playing Guitar(click me)</span>
-                    <ul class="details">
-                        <li>J-Rock</li>
-                        <li>Russian Rock</li>
-                    </ul>
-                </li>
-                <li class="hobby">
-                    <span class="title">+ Drawing(click me)</span>
-                    <ul class="details">
-                        <li> Just on paper</li>
-                    </ul>
-                </li>
-                <li class="hobby">
-                    <span class="title">+ Learning new Knowledge(click me)</span>
-                    <ul class="details">
-                        <li>Learing more about Geographie</li>
-                        <li>Learning more about History</li>
-                        <li>Learning more about Linux</li>
-                        <li>Learning more about programming</li>
-                        <li>Learning more about linguistics</li>
-                        <li>Learning more about astronomy</li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="container_hobbies">
+                <h2>My hobbies</h2>
+                <ul class="hobbies-list">
+                    <li class="hobby">
+                        <span class="title">+ Gaming(click me)</span>
+                        <ul class="details">
+                            <li>All my played Games on Steam</li>
+                        </ul>
+                    </li>
+                    <li class="hobby">
+                        <span class="title">+ Watching Anime(click me)</span>
+                        <ul class="details">
+                            <li>My anime list</li>
+                        </ul>
+                    </li>
+                    <li class="hobby">
+                        <span class="title">+ Programming(click me)</span>
+                        <ul class="details">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>C#</li>
+                        </ul>
+                    </li>
+                    <li class="hobby">
+                        <span class="title">+ Playing Guitar(click me)</span>
+                        <ul class="details">
+                            <li>J-Rock</li>
+                            <li>Russian Rock</li>
+                        </ul>
+                    </li>
+                    <li class="hobby">
+                        <span class="title">+ Drawing(click me)</span>
+                        <ul class="details">
+                            <li> Just on paper</li>
+                        </ul>
+                    </li>
+                    <li class="hobby">
+                        <span class="title">+ Learning new Knowledge(click me)</span>
+                        <ul class="details">
+                            <li>Learing more about Geographie</li>
+                            <li>Learning more about History</li>
+                            <li>Learning more about Linux</li>
+                            <li>Learning more about programming</li>
+                            <li>Learning more about linguistics</li>
+                            <li>Learning more about astronomy</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="spacer-right"></div>
+        <div class="mobile">
+            <h1>Mobile-version</h1>
+            <p>Comming soon!!!</p>
+            <img src="https://media.tenor.com/1gC38FU13DkAAAAi/sausage-sausage-flip.gif">
+            <img src="https://media.tenor.com/yVboyzrkgxEAAAAj/dorito-spin.gif">
+            <img src="https://media.tenor.com/iuJxty_zrBAAAAAi/obama-ball.gif">
+        </div>
     </body>
 </html>
