Added maintenance work music on mobile version

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="spacer-right"></div>
         <div class="mobile">
             <h1>Mobile-version</h1>
-            <p>Comming soon!!!</p>
+            <p>Coming soon!!!<br> change on desktop version!</p>
             <img src="https://media.tenor.com/1gC38FU13DkAAAAi/sausage-sausage-flip.gif">
             <img src="https://media.tenor.com/yVboyzrkgxEAAAAj/dorito-spin.gif">
             <img src="https://media.tenor.com/iuJxty_zrBAAAAAi/obama-ball.gif">
