Added taskbar and tux with gun icon

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     </div>
                 </div>
                 <div class="update-log">
-                    <h2>The Update Log</h2>
-                    <p>Here you see all the changes that have take place on this website</p>
+                    <h2>The update log</h2>
+                    <p>09.12.2025 05:43<br>Added a taskbar and tux with gun icon</p>
+                    <p>08.12.2025 23:20<br>Added maintenance work music on mobile-version</p>
+                    <p>08.12.2025 21:38<br>Added mobile version that comes soon</p>
+                    <p>08.12.2025 09:31<br>Perfect centralized on 1440p and 1080p monitor</p>
                 </div>
             </div>
 
@@ -103,5 +106,16 @@
             <img src="https://media.tenor.com/yVboyzrkgxEAAAAj/dorito-spin.gif">
             <img src="https://media.tenor.com/iuJxty_zrBAAAAAi/obama-ball.gif">
         </div>
+        <div id="taskbar">
+  <button id="start-button">
+    <img class="tux_with_gun" src="about_me_images/tux_with_gun.png">
+  </button>
+  <div id="taskbar-items">
+    <!-- Adding soon links, apps -->
+  </div>
+  <div id="system-tray">
+    <!-- Adding soon something -->
+  </div>
+</div>
     </body>
 </html>
