--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="robots" content="noindex, nofollow">
         <title>about_Leokasuki</title>
         <link rel="stylesheet" href="about_leokasuki.css">
         <script src="about_leokasuki.js" defer></script>
