Added a icon, that leads to the setup side

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <div class="page-layout">
         <div class="desktop">
             <div class="scroll-wrapper">
                 <div class="scroll-content" id="scrollContent"></div>
@@ -41,6 +42,7 @@
                 </div>
                 <div class="update-log">
                     <h2>The update log</h2>
+                    <p>10.12.2025 04:08<br>Added a icon, that leads to the setup site</p>
                     <p>09.12.2025 05:43<br>Added a taskbar and tux with gun icon</p>
                     <p>08.12.2025 23:20<br>Added maintenance work music on mobile-version</p>
                     <p>08.12.2025 21:38<br>Added mobile version that comes soon</p>
@@ -98,8 +100,11 @@
                     </li>
                 </ul>
             </div>
+            <img class="computer-icon" src="about_me_images/setup and pc compenents.png">
         </div>
         <div class="spacer-right"></div>
+        </div>
+        
         <div class="mobile">
             <h1>Mobile-version</h1>
             <p>Coming soon!!!<br> change on desktop version!</p>
