Added second site(not ready)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </div>
                 <div class="update-log">
                     <h2>The update log</h2>
+                    <p>10.12.2025 08:05<br>Added the setup site with "Go Back!" Button</p>
                     <p>10.12.2025 04:08<br>Added a icon, that leads to the setup site</p>
                     <p>09.12.2025 05:43<br>Added a taskbar and tux with gun icon</p>
                     <p>08.12.2025 23:20<br>Added maintenance work music on mobile-version</p>
@@ -100,7 +101,9 @@
                     </li>
                 </ul>
             </div>
-            <img class="computer-icon" src="about_me_images/setup and pc compenents.png">
+            <a href="subpages/subpage_setup_pc_compenents/setup_pc_compenents.html">
+                <img class="computer-icon" src="about_me_images/setup and pc compenents.png">
+            </a>
         </div>
         <div class="spacer-right"></div>
         </div>
@@ -112,16 +115,17 @@
             <img src="https://media.tenor.com/yVboyzrkgxEAAAAj/dorito-spin.gif">
             <img src="https://media.tenor.com/iuJxty_zrBAAAAAi/obama-ball.gif">
         </div>
-        <div id="taskbar">
-  <button id="start-button">
-    <img class="tux_with_gun" src="about_me_images/tux_with_gun.png">
-  </button>
-  <div id="taskbar-items">
-    <!-- Adding soon links, apps -->
-  </div>
-  <div id="system-tray">
-    <!-- Adding soon something -->
-  </div>
-</div>
+        <div class="taskbar">
+            <button class="start-button">
+            <img class="tux_with_gun" src="about_me_images/tux_with_gun.png">
+            </button>
+            <p class="tux-message">Go back!</p>
+            <div class="taskbar-items">
+                <!-- Adding soon links, apps -->
+            </div>
+            <div class="system-tray">
+                <!-- Adding soon something -->
+            </div>
+        </div>
     </body>
 </html>
