Added basic structure on the pc page

--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
@@ -11,15 +11,34 @@
 
     <body>
         <div class="desktop">
-            <div class="container">
-            <h1>Über mich</h1>
-            <p>
-            </p>
+            <div class="container pc-container">
+            <h1>My PC</h1>
+                <div class="slides pc-slides">
+                    <div class="slide active">PC Slide 1 – Overview</div>
+                        <div class="slide">PC Slide 2 – Components</div>
+                        <div class="slide">PC Slide 3 – Benchmarks</div>
+                    </div>
+                        <div class="indicator-container pc-indicators"></div>
+                        <div class="navigation pc-nav">
+                            <button class="prev">◀</button>
+                            <button class="next">▶</button>
+                        </div>
+                    </div>
 
-            <p>
-            </p>
-        </div>
-        </div>
+                    <div class="container setup-container">
+                        <h1>My Setup</h1>
+                        <div class="slides setup-slides">
+                        <div class="slide active">Setup Slide 1 – Desk</div>
+                        <div class="slide">Setup Slide 2 – Peripherals</div>
+                        <div class="slide">Setup Slide 3 – Extras</div>
+                    </div>
+                        <div class="indicator-container setup-indicators"></div>
+                        <div class="navigation setup-nav">
+                        <button class="prev">◀</button>
+                        <button class="next">▶</button>
+                    </div>
+                </div>
+            </div>
         <div class="mobile">
             <h1>Mobile-version</h1>
             <p>Coming soon!!!<br> change on desktop version!</p>
