Added funny gifs, changed one background

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 </div>
                 <div class="update-log">
                     <h2>The update log</h2>
+                    <p>12.12.2025 03:25<br>Added funny gifs, changed one background</p>
                     <p>10.12.2025 08:05<br>Added the setup site with "Go Back!" Button</p>
                     <p>10.12.2025 04:08<br>Added a icon, that leads to the setup site</p>
                     <p>09.12.2025 05:43<br>Added a taskbar and tux with gun icon</p>
                     <p>08.12.2025 23:20<br>Added maintenance work music on mobile-version</p>
                     <p>08.12.2025 21:38<br>Added mobile version that comes soon</p>
-                    <p>08.12.2025 09:31<br>Perfect centralized on 1440p and 1080p monitor</p>
                 </div>
             </div>
 
@@ -107,7 +107,10 @@
         </div>
         <div class="spacer-right"></div>
         </div>
-        
+        <img class="chara" src="https://media.tenor.com/hccwhstYLzgAAAAi/chara-dance-chara.gif">
+        <img class="yuuka" src="https://media.tenor.com/CGoFegKvAjcAAAAi/touhou-project.gif">
+        <img class="nyan-cat" src="https://media.tenor.com/8lR3_1m-i94AAAAi/cat.gif">
+        <img class="crusty-pizza" src="https://media.tenor.com/gL2Cp2_CV7YAAAAi/spongebob-squidward.gif">
         <div class="mobile">
             <h1>Mobile-version</h1>
             <p>Coming soon!!!<br> change on desktop version!</p>
@@ -125,6 +128,7 @@
             </div>
             <div class="system-tray">
                 <!-- Adding soon something -->
+                 <img class="mettaton" src="https://media.tenor.com/qhHjW0xdhdIAAAAi/pixel-sitting.gif">
             </div>
         </div>
     </body>
