--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
@@ -14,8 +14,10 @@
             <div class="container pc-container">
             <h1>My PC</h1>
                 <div class="slides pc-slides">
-                    <div class="slide active">PC Slide 1 – Overview</div>
-                        <div class="slide">PC Slide 2 – Components</div>
+                    <div class="slide active">Overview
+                    </div>
+                        <div class="slide">PC Slide 2 – Components
+                        </div>
                         <div class="slide">PC Slide 3 – Benchmarks</div>
                     </div>
                         <div class="indicator-container pc-indicators"></div>
@@ -38,6 +40,8 @@
                         <button class="next">▶</button>
                     </div>
                 </div>
+                <img class="kirby" src="https://media.tenor.com/f5mFRebd1WwAAAAi/kirby-running.gif">
+                <img class="tenna" src="https://media.tenor.com/t536_6C1QUIAAAAi/deltarune-ant-tenna.gif">
             </div>
         <div class="mobile">
             <h1>Mobile-version</h1>
