fixed few bugs, Added new gifs

--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
@@ -42,6 +42,7 @@
                 </div>
                 <img class="kirby" src="https://media.tenor.com/f5mFRebd1WwAAAAi/kirby-running.gif">
                 <img class="tenna" src="https://media.tenor.com/t536_6C1QUIAAAAi/deltarune-ant-tenna.gif">
+                <img class="emu" src="https://media.tenor.com/1ZC6p_i7QjgAAAAj/pjsk-emu-otori.gif">
             </div>
         <div class="mobile">
             <h1>Mobile-version</h1>
@@ -62,6 +63,7 @@
             </div>
             <div class="system-tray">
                 <!-- Adding soon something -->
+                 <img class="flandre" src="https://media.tenor.com/YYztq7N1Xb0AAAAj/touhou-flandre.gif">
             </div>
         </div>
     </body>
