Changed main text color, Added new content for the slides

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </div>
                 <div class="update-log">
                     <h2>The update log</h2>
+                    <p>20.12.2025 05:57<br>Changed main text color, added new content for the slides</p>
                     <p>12.12.2025 03:25<br>Added funny gifs, changed one background</p>
                     <p>10.12.2025 08:05<br>Added the setup site with "Go Back!" Button</p>
                     <p>10.12.2025 04:08<br>Added a icon, that leads to the setup site</p>
