--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
@@ -14,12 +14,84 @@
             <div class="container pc-container">
             <h1>My PC</h1>
                 <div class="slides pc-slides">
-                    <div class="slide active">Overview
+                    <div class="slide active">
+                        <h1>Overview</h1>
+                        <h4>Build Year</h4>
+                        <p>Build: September 2021(4 years old)</p>
+                        <h4>Estimated Value</h4>
+                        <p>1200€</p>
+                        <h4>Purpose</h4>
+                        <p>Gaming, Dev, Editing</p>
+                        <h4>OS</h4>
+                        <p>Arch Linux</p>
+                        <img class="arch-icon" src="setup_pc_compenents_images/Arch Icon.png">
                     </div>
-                        <div class="slide">PC Slide 2 – Components
+                    <div class="slide">
+                        <h1>Pictures</h1>
+                    </div>
+                    <div class="slide">
+                        <h1>Components</h1>
+
+                        <div class="components-grid">
+                            <div class="left">
+                                <h4>PC Case</h4>
+                                <p>Sharkoon elite shark CA300T white</p>
+                                <h4>Mainboard</h4>
+                                <p>Gigabyte B550 aorus elite v2</p>
+                                <h4>CPU</h4>
+                                <p>AMD Ryzen 7 3700x</p>
+                                <h4>GPU</h4>
+                                <p>Gainward GeForce RTX 3060 12GB</p>
+                            </div>
+                            <div class="right">
+                                <h4>RAM</h4>
+                                <p>32GB DDR4 3200MHz</p>
+                                <h4>Drives</h4>
+                                <p>System Drive: 500GB Samsung M.2 SSD</p>
+                                <p>Gaming Drive: 8TB Samsung SATA SSD</p>
+                                <h4>Power Supply</h4>
+                                <p>Be quiet Straight Power 11 650W</p>
+                            </div>
                         </div>
-                        <div class="slide">PC Slide 3 – Benchmarks</div>
                     </div>
+                    <div class="slide">
+                        <h1>Cooling and Noise</h1>
+                        <h4>Water cooling(AIO)</h4>
+                        <p>NZXT Kranken X73 360mm</p>
+                        <h4>Number of fans</h4>
+                        <p>7</p>
+                        <h4>Idle Temperature</h4>
+                        <p>CPU on AVG: </p>
+                        <p>GPU on AVG: </p>
+                        <h4>Gaming Temperature</h4>
+                        <p>CPU on AVG: </p>
+                        <p>GPU on AVG: </p>
+                        <h4>Idle Noise</h4>
+                        <p>MIN: 20.0dB</p>
+                        <p>AVG: 23.4dB</p>
+                        <p>MAX: 26.0dB</p>
+                        <h4>Gaming Noise</h4>
+                        <p>MIN: dB</p>
+                        <p>AVG: dB</p>
+                        <p>MAX: dB</p>
+                    </div>
+                    <div class="slide">
+                        <h1>PC Benchmarks</h1>
+                        <h4>CPU Benchmarks</h4>
+                        <p></p>
+                        <h4>GPU Benchmarks</h4>
+                        <p></p>
+                    </div>
+                    <div class="slide">
+                        <h1>Gaming Performance</h1>
+                        <h4>Cyberpunk 2077</h4>
+                        <p></p>
+                        <h4>Doom the dark ages</h4>
+                        <p></p>
+                        <h4>Portal</h4>
+                        <p></p>
+                    </div>
+                </div>
                         <div class="indicator-container pc-indicators"></div>
                         <div class="navigation pc-nav">
                             <button class="prev">◀</button>
